--- a/successful.html
+++ b/successful.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Title of the document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IcanBuyAHouse</title>
 </head>
-
 <body>
-    The content of the document......
+    <div>
+        
+    </div>
+    
 </body>
-
 </html>
