messinng around with features in css

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         </div>
         <br>
 
-        <button>Calculate My Chances</button>
+        <button id="batButton">Calculate My Chances</button>
+        <div id="batContainer"></div>
+        <script src="script.js"></script>
     </form>
 
 </body>
