--- a/graphingData.html
+++ b/graphingData.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="graphingData.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <title>Resizable Bar Graph with Dynamic Color and Label</title>
     <style>
         /* Adjust the canvas size */
@@ -13,6 +18,7 @@
     </style>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
+
 <body>
     <canvas id="barChart"></canvas>
 
@@ -133,4 +139,5 @@
         updateBarHeight();
     </script>
 </body>
+
 </html>
